 2011-07-08 11:33  paulbeach 
   M src/jrd/divorce.cpp
Fix problem with fid's and GCD for MacOS 10.7 SuperServer

 2011-07-08 11:31  paulbeach 
   M configure.in
False positive for fdatasync on MacOS

 2011-07-07 16:24  dimitr 
   M src/jrd/btr.cpp
   M src/jrd/sort.cpp
Fixed CORE-3547: Floating-point negative zero doesn't match positive zero in the index.

 2011-07-01 10:39  alexpeshkoff 
   M doc/WhatsNew
updated

 2011-07-01 10:15  alexpeshkoff 
   M doc/README.build.posix.html
   M src/jrd/isc_sync.cpp
This appears to fix CORE-3400: Server crash every 3 hour (FreeBSD8.2R), but I did not get final confirmation from the reporter too long

 2011-07-01 09:22  alexpeshkoff 
   M builds/install/arch-specific/hpux/Makefile.in
   M builds/install/arch-specific/linux/Makefile.in
   M builds/install/arch-specific/linux/misc/tarMainInstall.sh.in
   M builds/install/arch-specific/netbsd/Makefile.in
Fixed CORE-3544: make install fails

 2011-07-01 08:35  dimitr 
   M src/jrd/nbak.h
Misc.

 2011-06-26 22:27  hvlad 
   M src/dsql/ddl.cpp
Fixed bug CORE-3509 : Alter procedure allows to add the parameter with the same name.

 2011-06-25 03:33  robocop 
   M src/jrd/tra.cpp
   M src/jrd/vio.cpp
Misc.

 2011-06-24 13:14  hvlad 
   M src/jrd/tra.cpp
   M src/jrd/vio.cpp
   M src/jrd/vio_proto.h
Backport improvement CORE-3537 : There is no need to undo changes made in GTT created with ON COMMIT DELETE ROWS option when transaction is rolled back.

 2011-06-24 13:08  hvlad 
   M src/jrd/jrd.h
   M src/jrd/tra.cpp
   M src/jrd/tra.h
   M src/jrd/vio.cpp
Backport improvement CORE-3536 : Garbage collection in GTT is unnecessary delayed by active transactions in another attachments

 2011-06-24 11:52  hvlad 
   M src/jrd/vio.cpp
Delete deferred work when savepoint is cleaned up after failure even if no records was modified. Else DFW task will be repeated at commit making system tables logically inconsistent.

 2011-06-24 11:48  hvlad 
   M src/jrd/tra.cpp